@@ -1,11 +1,9 @@
 * Implement signals for deleted variables etc.
 * Sort out when small floats really are zero due to limited precision
 * Quoted ")" in function
-* Instant apply for all parameters in plot
 * Plot-functions
 * Replace pointers to unit when unit type has changed (a different object must be created)
 * Sort out percentile and provide alternative methods
-* Improve matrix editing
 
 * More functions
 * More units
